# AdventOfCode

./: pyproject.toml
advent_of_code/2021/day10/: main.py
advent_of_code/2022/day1/: input.csv  input.py  main.py  models.py  test_input.py  test_models.py
advent_of_code/2022/day1/fixtures/: test_input.csv
advent_of_code/2022/day19/: main.py  models.py  test_models.py
advent_of_code/2022/day2/: models.py
advent_of_code/2022/day21/: input.csv  input.py  main.py  models.py
advent_of_code/2022/day3/: helpers.py  input.csv  input.py  main.py  models.py  test_input.py  test_models.py
advent_of_code/2022/day3/fixtures/: test_input.csv
