[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Harry <harrycaira@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
2021_10 = 'advent_of_code.2021.day10.main:main'
2021_25 = 'advent_of_code.2021.day25.main:main'

2022_1 = 'advent_of_code.2022.day1.main:main'